# teste-liststore

./: Cargo.toml
src/: main.rs
