[package]
name = "teste-ListBox"
version = "0.1.0"
authors = ["Márcio <marciosr10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.8.0"
features = ["v2_44"]

[dependencies.glib]
version = "0.9.0"
features = ["v2_44"]
